--- a/webpage.html
+++ b/webpage.html
@@ -25,5 +25,12 @@
     <p>
         Hypertext Markup Language (HTML) is...; the standard markup language[a] for documents designed to be displayed in a web browser. It defines the content and structure of web content. It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript, a programming language.
     </p>
+    <p> HTML 2
+    November 24, 1995
+    HTML 2.0 was published as RFC 1866. Supplemental RFCs added capabilities:
+    November 25, 1995: RFC 1867 (form-based file upload)
+    May 1996: RFC 1942 (tables)
+    August 1996: RFC 1980 (client-side image maps)
+    January 1997: RFC 2070 (internationalization)</p>
 </body>
 </html>
